Fixed Pattern Encoding Terminal not loading advanced patterns